Fixed layout alignment

--- a/src/app/shop/shop-item/shop-item.component.scss
+++ b/src/app/shop/shop-item/shop-item.component.scss
@@ -1,3 +1,7 @@
+div.shop-item:hover {
+    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 5px 8px 0px rgba(0, 0, 0, 0.14), 0px 1px 14px 0px rgba(0, 0, 0, 0.12);
+}
+
 div.shop-item {
     margin: 10px;
     background-color: white;
@@ -10,8 +14,8 @@ div.shop-item {
         }
     }
     img {
-        width: 100%;
-        max-height: 300px;
+        max-width: 300px;
+        max-width: 200px;
     }
     .content {
         padding: 10px;
